public/css/styles.less
@entry_border_rounded: 5px;
@entry_header_background_color: #DDD;
@body_background_color: #EEE;
@import "/css/bootstrap.css";

.dropdown-menu>li>a {
    padding-right:0px !important;
    padding-left:20px !important;
}

.flair_header {
    position:relative;
    display: inline-flex;
}

.alertgroup_open {
    border-radius: 10px !important;
    line-height: 12pt;
    padding-top:5px;
    padding-left:2px;
}

.alertgroup_closed {
    border-radius: 0px !important;
    line-height: 12pt;
    padding-top:5px;
    padding-left:2px;
}

.alertgroup_promoted {
    border-radius: 5px !important;
    border-color: orange !important;
    border-width: thick !important;
    line-height: 12pt;
    padding-top:5px;
    padding-left:2px;
}

.alertgroup {
    font-size:10pt;
}

span.tag-new {
    position: relative;
    display: inline-flex;
    vertical-align: middle;
}

.table-centered {
    margin-left: auto;
    margin-right: auto;
}

tr.spaceTop > th {
    padding-top: .5em;
}

tr.spaceTop > td {
    padding-top: 1em;
}

input[type=text] {
    background-color:#292929;
    border-color: #292929;
    border-style: solid;
}

.anchor {
    display: block; 
    visibility: hidden;
}

.alert-wrapper {
    overflow:auto;
    display:block;
    padding-left:5px;
    padding-right: 5px;
}

.entry-header-info-null {
    color:#ECECEC;
    background-color:#292929;
    padding-right: 5px;
    padding-bottom: 2px;
    width: 100%;
    position: null;
    box-shadow: 0px 5px 5px -5px #333;
    //top: 1px;
}

.entry-header-info-absolute {
    color:#ECECEC;
    background-color:#292929;
    padding-right: 5px;
    padding-bottom: 2px;
    width: 100%;
    position: absolute;
    box-shadow: 0px 5px 5px -5px #333;
    //top: 1px;
}

.entry-header-info-fixed {
    color:#ECECEC;
    background-color:#292929;
    padding-right: 5px;
    padding-bottom: 2px;
    width: 100%;
    position: fixed;
    box-shadow: 0px 5px 5px -5px #333; 
}

.entry-container {
    height: 100%;
    display:initial;
}

.entry-wrapper-main {
    width: 100%;
    //height: 90vh;
    position: relative;
    overflow:auto;
}

.entry-wrapper-main-70 {
    width: 100%;
    //height: 70vh;
    position: relative;
    overflow:auto;
}

.entry-wrapper-main-nh {
    width: 100%;
    position: relative;
    overflow: auto;
}

.entry-wrapper {  
    background-color:#FFFFFF;
    border-radius: @entry_border_rounded;
    border: 1px solid #999999;
    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.6);
}

.entry-wrapper-id {
    font-size: 12pt;
    padding-left: 4px;
    padding-bottom: 4px;
    padding-top: 4px;
}

.entry-outer {
  background-color:white;
   border-radius: @entry_border_rounded;
   border: 1px solid #999999;
   box-shadow: 0 1px 1px rgba(0, 0, 0, 0.6);
   margin-bottom:10px;
}


.entry-header {
   background-color: @entry_header_background_color;
    box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.9);
   border-radius: @entry_border_rounded @entry_border_rounded 0px 0px;
}

.entry-header-inner, .entry-body-inner {
  padding:(@entry_border_rounded /4) 5px 0px (@entry_border_rounded );
}

.entry-header-inner {
  height:25px;
}

.entry-body-inner {
  overflow:auto; 
  padding-top:0px;
  padding-left:10px;
}

.entry-body {
  padding-bottom:2px;
  padding-top:2px;
  border-radius: 0px 0px @entry_border_rounded @entry_border_rounded
}

body {
   background-color:@body_background_color;
}
#BottomPane [contenteditable=true] {padding: 10px; outline: 2px dashed red;}

.popover-content {
  font-size: 12pt;
  color: black;
  cursor: pointer;
}

.tab-content {
    height: 100%;
    display: flex;
    flex-flow: column;
}

.swatch {
  width:10px; 
  height:10px; 
  display:block;  
  border:1px solid black;
}

.tinymce_icons {
  background: url(/icons.gif) no-repeat 20px 20px; 
  display:block; 
  width:20px; 
  height:20px; 
}

.details-table td,th {
  padding-left:5px;
  padding-right:20px;
  text-align:left;
  vertical-align: middle;
}

.details-table th {
 font-size:12pt;
 outline: 0px solid transparent;
}

.details-subject {
 font-size:18pt;
}

.grid-table th {
  font-size:8pt;
}

.grid-table td {
  padding-bottom:1px;
  padding-top:1px;

}

#BottomPane {
  padding:5px;
  -webkit-box-flex:1;
  -moz-box-flex:1;
  box-flex: 1;
  -webkit-box-ordinal-group:4;
  -moz-box-ordinal-group:4;
  box-ordinal-group:4;
}

.tableHeader {
  font-size:8pt;
  padding-left:2px;
  padding-right:3px;
}

.editable {
  border-radius: @entry_border_rounded;
  background-color: #515151 !important;
  border: 1px solid #cccccc !important;
  box-shadow: inset 0 0 2px 2px rgba(0,0,0, 0.2) !important;
  border-color: #111111 !important;
 
}

.editable, .select2-container {
  min-height:23px; 
 padding: 4px 14px;
  margin-bottom:0;
  font-size:13px;
  font-weight:normal;
  line-height:1;
  -webkit-border-radius: @entry_border_rounded;
 display: inline-block;
  color: white !important;
  vertical-align:middle;
  margin-left:0px;
  -webkit-rtl-ordering: logical;
  -webkit-user-select: text;
  text-transform: none;
  text-indent: 0px;
  text-shadow: none;
  text-align: start;
  -webkit-writing-mode: horizontal-tb;
}



.editable:focus, .select2-container:focus {
  background-color: white !important;
  outline: 0px solid transparent !important;
  color: #555555 !important;
}

.cancel_btn {
  display: inline;
}

.entry_content {
  
}

.todo_open {
  background-color:#993333;
  color: white;
}

.todo_assigned {
  background-color: #B8B800
}

.todo_completed {
  background-color: #669966;
  color: white;
}

.todo_open_outer {
  border: 2px solid #993333;
}

.todo_assigned_outer {
  border: 2px solid #B8B800;
}

.todo_completed_outer {
  border: 2px solid #669966;
}

.toolbar {
  //display: none;
  position:relative;
  padding-top:10px;
  margin-bottom:10px;
  border-top:1px solid white;
}
.toolbar  select {
  margin-bottom:0px;
}

.orange-left {
   border-radius: 5px 0px 0px 5px;
}
.orange-center{

}
.orange-right{
   border-radius: 0px 5px 5px 0px;
}
/* ... */

